# garmin-data

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
integrations/garmin/: README.md  ai_context.py  auth.py  cli.py  client.py  config.py  insights.py  mcp_server.py  models.py  service.py  storage.py  sync.py
tests/: conftest.py  test_ai_context.py  test_cli.py  test_insights.py  test_service.py  test_storage.py
tests/fixtures/garmin/: activities.json  body_battery.json  daily_summary.json  hrv.json  sleep.json  stress.json
